--- a/Forma/MainWindow.xaml
+++ b/Forma/MainWindow.xaml
@@ -51,11 +51,11 @@
 
         
         <Label Grid.Row="8" Grid.Column="0" Content="Password" Margin="0,5"/>
-        <PasswordBox Grid.Row="9" Grid.Column="0" Margin="0,5"/>
+        <PasswordBox x:Name = "PasswordBox" Grid.Row="9" Grid.Column="0" Margin="0,5"/>
 
        
         <Label Grid.Row="10" Grid.Column="0" Content="Confirm Password" Margin="0,5"/>
-        <PasswordBox Grid.Row="11" Grid.Column="0" Margin="0,5"/>
+        <PasswordBox x:Name = "ConfirmPasswordBox" Grid.Row="11" Grid.Column="0" Margin="0,5"/>
 
        
         <TextBlock Grid.Row="12" Grid.Column="1" Grid.ColumnSpan="2" TextWrapping="Wrap" Margin="0,10,0,0">
